// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail renders 1`] = `
<div
  className="AptoThumbnail"
/>
`;

exports[`Thumbnail with image renders 1`] = `
<div
  className="AptoThumbnail"
>
  <img
    src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg=="
  />
</div>
`;
